traffic-management/3-traffic-shifting/1-virtual-service-all-traffic-v2.yaml
# File virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: notification
spec:
  hosts:
  - notification-service
  http:
  - route:
    - destination:
        host: notification-service
        subset: v1
      weight: 0
    - destination:
        host: notification-service
        subset: v2
      weight: 100
