traffic-management/3-traffic-shifting/virtual-service.yaml
# File virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: notification
spec:
  hosts:
  - notification-service
  http:
  - route:
    - destination:
        host: notification-service
        subset: v1
      weight: 80
    - destination:
        host: notification-service
        subset: v2
      weight: 20
